--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: LLM Engineering Course
+site_name: Large Language Models - A Hands-on Approach
 site_description: A comprehensive hands-on course on Large Language Models for industry professionals
 site_url: https://llm-engg.github.io
 
